--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,16 +12,10 @@ services:
     volumes:
       - ./data/pgdata:/var/lib/postgresql/data
     restart: always
-  minio:
-    image: minio/minio
-    volumes:
-      - ./data/minio_root:/minio_root:z
-      - ./data/certs:/root/.minio/certs:z
-    command: "minio server /minio_root"
-    env_file: ./env.minio
-    restart: always
   outline:
     image: outlinewiki/outline:latest
+    port:
+      - 80:3000
     command: sh -c "yarn sequelize:migrate --env production-ssl-disabled && yarn start"
     environment:
       - DATABASE_URL=postgres://user:pass@postgres:5432/outline
@@ -29,20 +23,7 @@ services:
       - REDIS_URL=redis://redis:6379
     env_file:
       - ./env.outline
-      - ./env.slack
     restart: always
     depends_on:
       - postgres
       - redis
-      - minio
-  nginx:
-    image: nginx
-    ports:
-      - 8888:80
-      - 4443:443
-    volumes:
-      - ./data/nginx/:/etc/nginx/conf.d/:z
-      - ./data/certs/:/etc/ssl/certs/:z
-    restart: always
-    depends_on:
-      - outline
